# weather_application

./: LICENSE  README.md  app.py  data.json  main.py  main_streamlit_win.py  main_win.py  pyproject.toml  setting_file.py  user_settings.py  weather_and_time.py
