[tool.poetry]
name = "weather-application"
version = "0.1.0"
description = ""
authors = ["einavlapid <lapideinav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geocoder = "^1.38.1"
geopy = "^2.4.1"
timezonefinder = "^6.5.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
